Fix IE-specific website problem
The main website content was not centered in Internet Explorer.

--- a/source/http/main.css
+++ b/source/http/main.css
@@ -17,6 +17,7 @@ a:hover {
 }
 
 main {
+	display  : block;
 	max-width: 34em;
 	margin   : 0 auto;
 }
